Сборка проекта с перемещением ресурсов на сервере

--- a/kelvin-cloud-client/src/main/resources/config.properties
+++ b/kelvin-cloud-client/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #connect properties
 host=localhost
 port=1234
-storage.dir=client/server_storage
+storage.dir=client_storage
 max.obj.size=52428800
