--- a/kelvin-cloud-server/pom.xml
+++ b/kelvin-cloud-server/pom.xml
@@ -23,6 +23,7 @@
     <build>
         <finalName>kelvin-cloud-server</finalName>
         <plugins>
+            <!-- maven-jar-plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -33,84 +34,122 @@
                             <mainClass>com.kirikomp.server.Server</mainClass>
                         </manifest>
                     </archive>
-
                 </configuration>
             </plugin>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.3.0</version>
-                <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <archive>
-                        <manifest>
-                            <mainClass>com.kirikomp.server.Server</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
-                        <phase>package</phase> <!-- bind to the packaging phase -->
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+                        <plugin>
+                            <artifactId>maven-assembly-plugin</artifactId>
+                            <version>3.3.0</version>
+                            <configuration>
+                                <descriptorRefs>
+                                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                                </descriptorRefs>
+                                <archive>
+                                    <manifest>
+                                        <mainClass>com.kirikomp.server.Server</mainClass>
+                                    </manifest>
+                                </archive>
+                            </configuration>
+                            <executions>
+                                <execution>
+                                    <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                                    <phase>package</phase> <!-- bind to the packaging phase -->
+                                    <goals>
+                                        <goal>single</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+                        </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>3.0.2</version>
-                <configuration>
-                    <outputDirectory>${basedir}/target</outputDirectory>
-                    <resources>
-                        <resource>
-                            <directory>../db</directory>
-<!--                            <filtering>true</filtering>-->
-                        </resource>
-                        <resource>
-                            <directory>${project.basedir}/src/main/resources</directory>
-                            <filtering>true</filtering>
-                        </resource>
-                    </resources>
-                </configuration>
                 <executions>
                     <execution>
-                        <id>copy-resources</id>
-                        <!-- here the phase you need -->
+                        <id>copy-resources-1</id>
                         <phase>validate</phase>
                         <goals>
                             <goal>copy-resources</goal>
                         </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/classes</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>src/main/resources/*.xml</directory>
+                                    <filtering>true</filtering>
+                                </resource>
+                                <resource>
+                                    <directory>src/main/resources/*.properties</directory>
+                                    <filtering>true</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>copy-resources-2</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>../db</directory>
+                                    <filtering>true</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
                     </execution>
                 </executions>
-            </plugin>
-<!--            <plugin>-->
-<!--                <artifactId>maven-resources-plugin</artifactId>-->
-<!--                <version>3.0.2</version>-->
+
+<!--                <configuration>-->
+<!--                    <outputDirectory>${basedir}/target/classes</outputDirectory>-->
+<!--                    <resources>-->
+<!--                        <resource>-->
+<!--                            <directory>../db</directory>-->
+<!--                            &lt;!&ndash;                            <filtering>true</filtering>&ndash;&gt;-->
+<!--                        </resource>-->
+<!--                        <resource>-->
+<!--                            <directory>${project.basedir}/src/main/resources</directory>-->
+<!--                            <filtering>true</filtering>-->
+<!--                        </resource>-->
+<!--                    </resources>-->
+<!--                </configuration>-->
 <!--                <executions>-->
 <!--                    <execution>-->
 <!--                        <id>copy-resources</id>-->
+<!--                        &lt;!&ndash; here the phase you need &ndash;&gt;-->
 <!--                        <phase>validate</phase>-->
 <!--                        <goals>-->
 <!--                            <goal>copy-resources</goal>-->
 <!--                        </goals>-->
-<!--                        <configuration>-->
-<!--                            <resources>-->
-<!--                                <resource>-->
-<!--                                    <directory>data</directory>-->
-<!--                                    <filtering>false</filtering>-->
-<!--                                    <includes>-->
-<!--                                        <include>robots.txt</include>-->
-<!--                                    </includes>-->
-<!--                                </resource>-->
-<!--                            </resources>-->
-<!--                            <outputDirectory>${project.build.directory}</outputDirectory>-->
-<!--                        </configuration>-->
 <!--                    </execution>-->
 <!--                </executions>-->
-<!--            </plugin>-->
+            </plugin>
+            <!--            <plugin>-->
+            <!--                <artifactId>maven-resources-plugin</artifactId>-->
+            <!--                <version>3.0.2</version>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <id>copy-resources</id>-->
+            <!--                        <phase>validate</phase>-->
+            <!--                        <goals>-->
+            <!--                            <goal>copy-resources</goal>-->
+            <!--                        </goals>-->
+            <!--                        <configuration>-->
+            <!--                            <resources>-->
+            <!--                                <resource>-->
+            <!--                                    <directory>data</directory>-->
+            <!--                                    <filtering>false</filtering>-->
+            <!--                                    <includes>-->
+            <!--                                        <include>robots.txt</include>-->
+            <!--                                    </includes>-->
+            <!--                                </resource>-->
+            <!--                            </resources>-->
+            <!--                            <outputDirectory>${project.build.directory}</outputDirectory>-->
+            <!--                        </configuration>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
         </plugins>
     </build>
 
